# ros_shopping_shu

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~  readme
configs/: shop.dic  shop.lm  shop.lm~  shop.txt  shop.txt~
launch/: follow.launch~  map_mux_select.launch~  mux_select.launch~  recognizer.launch  recognizer.launch~  shopping.launch.xml  shopping.launch.xml~  shopping2.launch.xml~  shopping2.launch~
src/: follow.cpp~  laser_filter_leg.cpp  map_mux_select.py  map_saver_shopping.cpp  shopping .cpp~  shopping.cpp  shopping.cpp~  voice_analysis.cpp  voice_analysis.cpp~
